--- a/Dockerfile.heroku
+++ b/Dockerfile.heroku
@@ -1,4 +1,4 @@
-#Template from https://github.com/michaeloliverx/python-poetry-docker-example/blob/master/docker/Dockerfile
+# Template from https://github.com/michaeloliverx/python-poetry-docker-example/blob/master/docker/Dockerfile
 FROM python:3.10.2-slim-buster as python-base
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
@@ -13,7 +13,6 @@ ENV PYTHONUNBUFFERED=1 \
 
 ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
 
-
 # builder-base is used to build dependencies
 FROM python-base as builder-base
 RUN apt-get update \
@@ -23,7 +22,10 @@ RUN apt-get update \
 
 # Install Poetry - respects $POETRY_VERSION & $POETRY_HOME
 ENV POETRY_VERSION=1.1.12
-RUN curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py | python3
+RUN curl -sSL https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py -o get-poetry.py \
+    && HTTP_CODE=$(curl -sSL -o /dev/null -w "%{http_code}" https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py) \
+    && if [ "$HTTP_CODE" -eq 200 ]; then python3 get-poetry.py; else echo "Failed to fetch get-poetry.py (HTTP $HTTP_CODE)"; fi \
+    && rm get-poetry.py
 
 # We copy our Python requirements here to cache them
 # and install only runtime deps using poetry
