--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "name": "RavagerBot",
   "description": "A bot that sails the high seas and brings treasures from the land unknown",
-  "repository": "https://github.com/CoolFool/Ravager",
+  "repository": "https://github.com/karthik7536/Ravager",
   "stack":"container",
   "env":{
     "APP_URL":{
